<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_nav_home_outline"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_activities"
        android:icon="@drawable/ic_nav_leaf"
        android:title="@string/title_activities" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_nav_calendar_outline"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_rewards"
        android:icon="@drawable/ic_nav_gift_outline"
        android:title="@string/title_rewards" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_nav_profile_outline"
        android:title="@string/title_profile" />

</menu>